bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -79,7 +79,7 @@ h6 {
   .style,
   .description {
     font-family: 'Big Noodle Titling';
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin: 2%;
   }
 
